--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "url": "git+https://github.com/vroskus/library-history.git"
   },
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/"
+  ],
   "scripts": {
     "postinstall": "npm run build",
     "build": "tsc",
@@ -17,7 +21,7 @@
     "test:e2e": "echo 'No tests'"
   },
   "dependencies": {
-    "@vroskus/library-types": "1.0.4",
+    "@vroskus/library-types": "1.0.5",
     "react": "18.2.0",
     "react-router-dom": "5.3.0"
   },
