--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "test:e2e": "echo 'No tests'"
   },
   "dependencies": {
-    "@vroskus/library-types": "1.0.9",
+    "@types/history": "5.0.0",
+    "@types/react-router-dom": "5.3.3",
     "react": "18.2.0",
     "react-router-dom": "5.3.0"
   },
   "devDependencies": {
     "@types/jest": "29.5.7",
     "@types/node": "20.8.10",
-    "@types/react": "18.2.35",
+    "@types/react": "18.2.41",
     "@typescript-eslint/eslint-plugin": "6.9.1",
     "@typescript-eslint/parser": "6.9.1",
     "eslint": "8.53.0",
